Moved translation logic to system languages resolver. Also refactored the app component to a top layout component so global resolvers will be resolved throughout the whole app.

--- a/src/app/components/layouts/default-layout/default-layout.component.scss
+++ b/src/app/components/layouts/default-layout/default-layout.component.scss
@@ -1,5 +1,5 @@
-@import './styles/dimensions';
-@import './styles/colors';
+@import '../../../styles/colors';
+@import '../../../styles/dimensions';
 
 .navbar-container {
   height: 100%;
