--- a/src/app/components/layouts/default-layout/default-layout.component.scss
+++ b/src/app/components/layouts/default-layout/default-layout.component.scss
@@ -1,145 +1,82 @@
 @import '../../../styles/colors';
 @import '../../../styles/dimensions';
 
-.navbar-container {
+.layout-wrapper {
   height: 100%;
-}
+  @media screen and (min-width: $lg-device-width) {
+    width: $lg-device-width;
+    margin: 0 auto;
+  }
+  @media screen and (max-width: $lg-device-width) {
+    width: 100%;
+    max-width: 100vw;
+  }
 
-.menu-overlay-container {
-  height: 100%;
-  background: rgba(255, 255, 255, .5);
-  text-align: right;
-
-  .menu-container {
-    overflow-y: scroll;
-    background: $color-gray-25;
+  .wrapper {
+    display: table;
+    table-layout: fixed;
     height: 100%;
-    width: 375px;
-    display: inline-block;
-    text-align: left;
-    color: white;
-    @media screen and (max-width: $sm-device-width) {
-      width: 100%;
+    background: $white;
+    width: 100%;
+
+    .header-padder-table-row {
+      display: table-row;
+      height: $header-height;
     }
 
-    .navigation-menu-container {
-
-      .navigation-menu-links-container {
-        margin-top: 20px;
-
-        .navigation-menu-item {
-          border-top: 1px solid $color-gray-50;
-          color: $color-gray-300;
-          padding-top: 12px;
-          padding-bottom: 12px;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-        }
-
-        .navigation-menu-item:nth-last-of-type(1) {
-          border-bottom: 1px solid $color-gray-50;
-        }
-
-        a {
-          display: block;
-          cursor: pointer;
-          font-size: 16px;
-
-          &:hover {
-            opacity: 0.7;
-          }
-        }
-      }
-
-      .navigation-menu-user-container {
-        .navigation-menu-user-logged-in-container {
-          text-align: center;
-          color: $color-gray-300;
-
-          img {
-            border-radius: 50%;
-            border: 2px solid $color-primary-cerise;
-          }
-
-          h4 {
-            margin-top: 10px;
-          }
-        }
-      }
-
-      .navigation-menu-create-user-button {
-        width: 60%;
-        margin: 40px auto 0;
-      }
-    }
-  }
-}
-
-.wrapper {
-  display: table;
-  table-layout: fixed;
-  height: 100%;
-  background: $white;
-  width: 100%;
-
-  .header-padder-table-row {
-    display: table-row;
-    height: $header-height;
-  }
-
-  .app-content-container {
-    display: table-row;
-    height: 100%;
-  }
-
-  .footer {
-    display: table-row;
-
-    a {
-      color: $white;
+    .app-content-container {
+      display: table-row;
+      height: 100%;
     }
 
-    > div {
-      display: table-cell;
-      background: $color-secondary-gray;
-      color: $white;
-      padding: 20px;
-      font-size: 1.2em;
+    .footer {
+      display: table-row;
+
+      a {
+        color: $white;
+      }
 
       > div {
-        @media screen and (min-width: $sm-device-width) {
-          display: table;
-          width: 100%;
-        }
+        display: table-cell;
+        background: $color-secondary-gray;
+        color: $white;
+        padding: 20px;
+        font-size: 1.2em;
 
-        > p {
-          margin: 0;
-          text-align: center;
+        > div {
           @media screen and (min-width: $sm-device-width) {
-            display: table-cell;
+            display: table;
+            width: 100%;
           }
 
-          > span {
-            white-space: nowrap;
-          }
-        }
-
-        > p:nth-child(1) {
-          @media screen and (min-width: $sm-device-width) {
-            text-align: left;
-          }
-        }
-
-        > p:nth-child(2) {
-          @media screen and (min-width: $sm-device-width) {
+          > p {
+            margin: 0;
             text-align: center;
-          }
-        }
+            @media screen and (min-width: $sm-device-width) {
+              display: table-cell;
+            }
 
-        > p:nth-child(3) {
-          @media screen and (min-width: $sm-device-width) {
-            text-align: right;
+            > span {
+              white-space: nowrap;
+            }
+          }
+
+          > p:nth-child(1) {
+            @media screen and (min-width: $sm-device-width) {
+              text-align: left;
+            }
+          }
+
+          > p:nth-child(2) {
+            @media screen and (min-width: $sm-device-width) {
+              text-align: center;
+            }
+          }
+
+          > p:nth-child(3) {
+            @media screen and (min-width: $sm-device-width) {
+              text-align: right;
+            }
           }
         }
       }
