--- a/src/app/components/layouts/default-layout/default-layout.component.scss
+++ b/src/app/components/layouts/default-layout/default-layout.component.scss
@@ -12,74 +12,25 @@
     max-width: 100vw;
   }
 
-  .wrapper {
+  .layout-inner-wrapper {
     display: table;
     table-layout: fixed;
     height: 100%;
     background: $white;
     width: 100%;
 
-    .header-padder-table-row {
+    .layout-header-padder {
       display: table-row;
       height: $header-height;
     }
 
-    .app-content-container {
+    .layout-content {
       display: table-row;
       height: 100%;
     }
 
-    .footer {
+    .layout-footer {
       display: table-row;
-
-      a {
-        color: $white;
-      }
-
-      > div {
-        display: table-cell;
-        background: $color-secondary-gray;
-        color: $white;
-        padding: 20px;
-        font-size: 1.2em;
-
-        > div {
-          @media screen and (min-width: $sm-device-width) {
-            display: table;
-            width: 100%;
-          }
-
-          > p {
-            margin: 0;
-            text-align: center;
-            @media screen and (min-width: $sm-device-width) {
-              display: table-cell;
-            }
-
-            > span {
-              white-space: nowrap;
-            }
-          }
-
-          > p:nth-child(1) {
-            @media screen and (min-width: $sm-device-width) {
-              text-align: left;
-            }
-          }
-
-          > p:nth-child(2) {
-            @media screen and (min-width: $sm-device-width) {
-              text-align: center;
-            }
-          }
-
-          > p:nth-child(3) {
-            @media screen and (min-width: $sm-device-width) {
-              text-align: right;
-            }
-          }
-        }
-      }
     }
   }
 }
