--- a/src/app/components/bars/cookie-bar/cookie-bar.component.scss
+++ b/src/app/components/bars/cookie-bar/cookie-bar.component.scss
@@ -1,5 +1,5 @@
-@import '../../styles/colors';
-@import '../../styles/dimensions';
+@import '../../../styles/colors';
+@import '../../../styles/dimensions';
 
 .cookie-message {
   text-align: center;
