Move refactored pages to components/pages folder

--- a/src/app/components/pages/contact-page/contact-page.component.scss
+++ b/src/app/components/pages/contact-page/contact-page.component.scss
@@ -1,4 +1,4 @@
-@import '../../styles/colors';
+@import '../../../styles/colors';
 
 .contact-form-container {
   background-color: $default-bg-color;
