--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -40,7 +40,7 @@
     <div class="home-jobs-slider-show-all-jobs-link-container">
       <a
         class="home-jobs-slider-show-all-jobs-link home-jobs-slider-show-all-user-jobs-link"
-        routerLink="{{JARoutes.userJobs.url([user.id])}}">
+        [routerLink]="JARoutes.userJobs.url()">
         {{'home.jobs.slider.show.all.link' | translate | lowercase}} > <i class="icon-ic-arrow-right"></i>
       </a>
     </div>
@@ -140,7 +140,7 @@
         <base-button
           [buttonText]="'home.header.logged.in.profile.button' | translate"
           [fluid]="true"
-          [routerLink]="JARoutes.user.url([user.id])"
+          [routerLink]="JARoutes.user.url()"
           kind="secondary-light"
           size="medium">
         </base-button>
