--- a/src/app/views/user/user-settings/user-settings.component.html
+++ b/src/app/views/user/user-settings/user-settings.component.html
@@ -21,5 +21,5 @@
   </div>
 </div>
 
-<user-profile *ngIf="selectedState == 'profile'" [user]="user"></user-profile>
-<user-details *ngIf="selectedState == 'details'" [user]="user"></user-details>
+<user-profile *ngIf="selectedState == 'profile'"></user-profile>
+<user-details *ngIf="selectedState == 'details'"></user-details>
