--- a/src/app/components/menus/navigation-menu/navigation-menu.component.scss
+++ b/src/app/components/menus/navigation-menu/navigation-menu.component.scss
@@ -1,6 +1,7 @@
 @import '../../../styles/colors';
 
 .navigation-menu-container {
+  height: 100%;
   .navigation-menu-links-container {
     margin-top: 20px;
 
