--- a/src/app/views/user/user-settings/user-settings.component.html
+++ b/src/app/views/user/user-settings/user-settings.component.html
@@ -1,6 +1,4 @@
-<user-profile-header
-  [user]="user">
-</user-profile-header>
+<user-profile-header></user-profile-header>
 
 <div class="ui grid user-profile-tab-container">
   <div
