--- a/src/app/components/forms/user-details-form/user-details-form.component.html
+++ b/src/app/components/forms/user-details-form/user-details-form.component.html
@@ -4,7 +4,7 @@
   class="ui form">
 
   <sm-loader
-    [complete]="!loadingSubmit"
+    [complete]="!loadingSubmit && (!user || !user.isBeingReloaded)"
     class="inverted"
     text="{{'component.loading' | translate}}">
   </sm-loader>
