Solve the reload of user with a whole page dimmer instead

--- a/src/app/components/forms/user-details-form/user-details-form.component.html
+++ b/src/app/components/forms/user-details-form/user-details-form.component.html
@@ -4,7 +4,7 @@
   class="ui form">
 
   <sm-loader
-    [complete]="!loadingSubmit && (!user || !user.isBeingReloaded)"
+    [complete]="!loadingSubmit"
     class="inverted"
     text="{{'component.loading' | translate}}">
   </sm-loader>
