--- a/src/app/components/forms/contact-form/contact-form.component.html
+++ b/src/app/components/forms/contact-form/contact-form.component.html
@@ -3,7 +3,7 @@
   [formGroup]="contactForm"
   class="ui form">
   <sm-loader
-    [complete]="!loadingSubmit && (!user || !user.isBeingReloaded)"
+    [complete]="!loadingSubmit"
     class="inverted"
     text="{{'component.loading' | translate}}">
   </sm-loader>
