--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -30,10 +30,11 @@
     </h2>
     <div
       class="ui centered grid"
-      style="margin: 40px 0">
+      style="margin: 20px 0">
       <div
         *ngFor="let userJob of userJobs"
         class="job-item-container"
+        style="margin: 15px 10px"
         [routerLink]="JARoutes.job.url([userJob.job.id])">
         <div class="job-item-name-container">
           <div class="job-item-name">
