adjust number of jobs in my jobs on home page

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -22,8 +22,8 @@
   </div>
 
   <div
-    class="user-jobs-container ui basic very padded center aligned segment"
-    style="margin: 0"
+    class="user-jobs-container ui basic center aligned segment"
+    style="margin: 0; padding: 30px 0"
     *ngIf="userJobsVisible()">
     <h2>
       {{'home.jobs.slider.user.jobs.title' | translate}}
