Partners section component

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -132,32 +132,5 @@
     </div>
   </div>
 
-
-  <div class="home-partners-container">
-    <h2 class="home-partners-title">{{'home.partners.title' | translate}}</h2>
-    <p>{{'home.partners.description' | translate}}</p>
-    <div class="home-partners-logos-container">
-      <div class="home-logo-container">
-        <a href="http://antrop.se/"><img class="home-partner-logo" src="/assets/images/antrop-logo2.png" alt="Antrop"></a>
-      </div>
-      <div class="home-logo-container">
-        <a href="http://universumglobal.com/"><img class="home-partner-logo" src="/assets/images/logo-universum.png" alt="Universum"></a>
-      </div>
-      <div class="home-logo-container">
-        <a href="https://www.frilansfinans.se/"><img class="home-partner-logo" src="/assets/images/frilans_finans-logo.png" alt="Frilans Finans"></a>
-      </div>
-      <div class="home-logo-container">
-        <a href="https://janssonnorin.se/"><img class="home-partner-logo" src="/assets/images/jansson_norin-logo.png" alt="Jansson Norin"></a>
-      </div>
-      <div class="home-logo-container">
-        <a href="http://novasverige.se/"><img class="home-partner-logo home-partner-logo-extra-left-padding" src="/assets/images/nova-logo.png" alt="Nova"></a>
-      </div>
-      <div class="home-logo-container">
-        <a href="http://bondstreet.se/"><img class="home-partner-logo" src="/assets/images/bond_street_film_sthlm.png" alt="Bond Street Film"></a>
-      </div>
-      <div class="home-logo-container">
-        <a href="http://halvarsson.se/"><img class="home-partner-logo" src="/assets/images/hallvarsson.jpg" alt="Hallvarsson Halvarsson"></a>
-      </div>
-    </div>
-  </div>
+  <partners-section></partners-section>
 </div>
